--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '2'
 services:
   flask:
-  
+    env_file:
+      - ./.env
     build: ./flask
     image: flask
     volumes:
@@ -10,6 +11,8 @@ services:
     environment:
       BOKEH_URL: 'http://${HOST_ADDRESS}:80/bokeh'
   bokeh:
+    env_file:
+      - ./.env
     build: ./bokeh
     image: bokeh-serve
     volumes:
@@ -17,6 +20,8 @@ services:
     command: --prefix bokeh --address 0.0.0.0 --port ${BK_PORT} --num-procs 0 --allow-websocket-origin=* sliders.py
   nginx:
     image: nginx:1.21.3
+    env_file:
+      - ./.env
     volumes:
       - ./nginx/generate_conf.sh:/tmp/generate_conf.sh
       - ./nginx/mysite.template:/etc/nginx/conf.d/mysite.template
